2023-03-31
    New MsvgBPServer structure to store a binary representation of a linear or radial
    gradient. Added fill_bps and stroke_bps members to the MsvgPaintCtx struct to
    store pointers to binary paint servers for fill and stroke operations.
    New functions:
        MsvgBPServer *MsvgNewBPServer(MsvgElement *el);
        creates a binary paint server from an EID_LINEARGRADIENT or EID_RADIALGRADIENT
        cooked element and their EID_STOP children.
        void MsvgDestroyBPServer(MsvgBPServer *bps);
        destroys a binary paint server.
        int MsvgCalcUnitsBPServer(MsvgBPServer *bps, MsvgBox *bbox, TMatrix *);
        transforms coordinates of a binary paint server, first if the gradient units
        are GRADUNIT_BBOX and a bbox is provided transform the units to GRADUNIT_USER,
        after that if the t matrix is not NULL the transformation is applied.
    Solved bug cooking EID_LINEARGRADIENT and EID_RADIALGRADIENT when cheking for
    gradient units.
    Solved bug calculating ellipse bounding box.
    MsvgSerCookedTree fills the fill_bps and stroke_bps members of the constructed
    context with binary paint servers if necesary.
    New test/tbpsrv.c test program.
2023-03-15
    New MsvgBox generic box structure, used for bounding box calculations and others
    New function:
        MsvgGetCookedBoundingBox(MsvgElement *el, MsvgBox *box, int inibox);
        It will be necesary to convert gradient bbox units to user units.
        Note, at this time it makes a rough estimation for PATH and TEXT elements.
2023-02-28
    Solved bug parsing compacted lists of points such as 8.2.3 (must be 8.2 and 0.3).
    Reported by gtoal on Github.
2022-12-12
    Updated docs to v0.72
2022-12-05
    Added the mode parameter to the MsvgTransformCookedElement function, it can be
    0 (or MSVGTCE_NORMAL) or a ored combination of MSVGTCE_CIR2PATH, MSVGTCE_ELL2PATH
    the first create path elements for circle elements, the second create path